Feat: generate RSS feed

--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -3,11 +3,10 @@ import Layout from '../components/layouts/Layout.astro';
 import { Image } from '@astrojs/image/components';
 import Date from '../components/utilities/Date.astro';
 import ReadTime from '../components/utilities/ReadTime.astro';
-import { published, getRSS } from '../data/post';
-export async function getStaticPaths({ rss }: { rss: any }) {
+import { published } from '../data/post';
+export async function getStaticPaths() {
   const markdownFiles = await Astro.glob('../posts/*.mdx');
   const posts = published(markdownFiles);
-  rss(getRSS(markdownFiles));
   return posts.map((post) => {
     return {
       params: { post: post.slug },
