--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -24,6 +24,25 @@ import { navItems } from '../data/nav';
         ))
       }
     </ul>
+    <a class='btn btn-square btn-ghost' href='/rss.xml'>
+      <svg
+        xmlns='http://www.w3.org/2000/svg'
+        class='icon icon-tabler icon-tabler-rss'
+        width='24'
+        height='24'
+        viewBox='0 0 24 24'
+        stroke-width='2'
+        stroke='currentColor'
+        fill='none'
+        stroke-linecap='round'
+        stroke-linejoin='round'
+      >
+        <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
+        <circle cx='5' cy='19' r='1'></circle>
+        <path d='M4 4a16 16 0 0 1 16 16'></path>
+        <path d='M4 11a9 9 0 0 1 9 9'></path>
+      </svg>
+    </a>
     <DarkMode />
     <div class='dropdown dropdown-end md:hidden'>
       <label tabindex={0} class='btn btn-ghost btn-square'>
