Fix: navbar opacity

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@ import DarkMode from './DarkMode.astro';
 import { navItems } from '../data/nav';
 ---
 
-<div class='navbar bg-base-100 pt-4 sticky top-0 z-50 opacity-90'>
+<div class='navbar bg-base-100 pt-4 sticky top-0 z-50 opacity-[0.925]'>
   <div class='flex-1'>
     <a
       class='p-2 hover:underline md:text-2xl font-bold flex gap-4 items-center'
