--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -24,7 +24,7 @@ import { navItems } from '../data/nav';
         ))
       }
     </ul>
-    <div class='tooltip tooltip-bottom' data-tip='Resume'>
+    <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='Resume'>
       <a
         class='btn btn-square btn-ghost'
         href='https://aleksastojsic.github.io/resume/'
@@ -51,7 +51,7 @@ import { navItems } from '../data/nav';
         </svg>
       </a>
     </div>
-    <div class='tooltip tooltip-bottom' data-tip='GitHub'>
+    <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='GitHub'>
       <a
         class='btn btn-square btn-ghost'
         href='https://github.com/aleksastojsic'
@@ -77,7 +77,7 @@ import { navItems } from '../data/nav';
         </svg>
       </a>
     </div>
-    <div class='tooltip tooltip-bottom' data-tip='RSS'>
+    <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='RSS'>
       <a class='btn btn-square btn-ghost' href='/rss.xml'>
         <svg
           xmlns='http://www.w3.org/2000/svg'
