--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -64,7 +64,7 @@ import { navItems } from '../data/nav';
           width='24'
           height='24'
           viewBox='0 0 24 24'
-          stroke-width='2'
+          stroke-width='1.5'
           stroke='currentColor'
           fill='none'
           stroke-linecap='round'
@@ -85,7 +85,7 @@ import { navItems } from '../data/nav';
           width='24'
           height='24'
           viewBox='0 0 24 24'
-          stroke-width='2'
+          stroke-width='1.5'
           stroke='currentColor'
           fill='none'
           stroke-linecap='round'
@@ -108,8 +108,8 @@ import { navItems } from '../data/nav';
           height='24'
           viewBox='0 0 24 24'
           fill='none'
-          stroke='#000'
-          stroke-width='1.5'
+          stroke='currentColor'
+          stroke-width='2'
           stroke-linecap='round'
           stroke-linejoin='round'
         >
