--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -10,7 +10,7 @@ const posts = published(markdownFiles);
   title='Blog'
   description='Blog posts about web development, design, and more.'
 >
-  <h1>Blog</h1>
+  <h1>Blog (under construction 🚧)</h1>
   <div class='-mt-8'>
     {posts.map((p) => <PostCard post={p} />)}
   </div>
