--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,7 +5,7 @@ import { projects } from '../data/project';
 ---
 
 <Layout title='Projects' description='A list of projects I have worked on.'>
-  <h1>Projects (under construction 🚧)</h1>
+  <h1>Projects <span class='text-xl'>(under construction 🚧)</span></h1>
   <div class='flex flex-col gap-4 md:gap-4'>
     <!-- map and add <div class='divider'></div> after each project except the last one  -->
     {
