Fix: astro is trash

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -58,5 +58,5 @@ import { days } from '../data/day';
   }
   const day = getCurrentDay();
   const footerMessage = document.getElementById('footer-message');
-  footerMessage.innerHTML = `~ Have a great ${day} ~`;
+  footerMessage.innerText = `~ Have a great ${day} ~`;
 </script>
