--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '../components/layouts/Layout.astro';
   <div class='flex flex-row items-center justify-start mb-4 md:mb-8'>
     <span
       id='typed'
-      class='text-4xl lg:text-5xl font-extrabold text-base-content'></span>
+      class='text-4xl font-extrabold lg:text-5xl text-base-content'></span>
     <span class='not-prose ml-3 animate-waving-hand w-[48px] h-[48px]'>
       <img
         src='/waving-hand.webp'
