--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -40,10 +40,10 @@ const {
     />
   </head>
   <body class='flex flex-col items-center h-screen'>
-    <div class='w-full max-w-3xl flex-grow'>
+    <div class='flex-grow w-full max-w-3xl'>
       <Navbar />
       <div class='px-4 pt-4 md:pt-8'>
-        <div class='prose lg:prose-lg min-w-full animate-content-fade'>
+        <div class='min-w-full prose lg:prose-lg animate-content-fade'>
           <slot />
         </div>
       </div>
