--- a/src/pages/[post].astro
+++ b/src/pages/[post].astro
@@ -28,7 +28,7 @@ const {
   canonical={import.meta.env.SITE + post.slug}
 >
   <div class='flex justify-center'>
-    <div class='flex flex-col prose lg:prose-lg min-w-full py-4 break-words'>
+    <div class='flex flex-col min-w-full py-4 prose break-words lg:prose-lg'>
       {
         post.img && post.imgWidth && post.imgHeight ? (
           <figure class='flex justify-center'>
