--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Layout from '../components/layouts/Layout.astro';
     Computer Science Student and Web Developer.
   </div>
   <div
-    class='w-[275px] h-[275px] lg:w-[350px] lg:h-[350px] xl:w-[400px] xl:h-[400px] 2xl:w-[450px] 2xl:h-[450px] mx-auto mt-4 bg-laptop'
+    class='w-[275px] h-[275px] sm:w-[350px] sm:h-[350px] md:w-[450px] md:h-[450px] mx-auto mt-4 bg-laptop'
   >
   </div>
 </Layout>
