--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -26,7 +26,7 @@ import { navItems } from '../data/nav';
       <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='Resume'>
         <a
           class='btn btn-square btn-ghost'
-          href='https://aleksastojsic.github.io/resume/'
+          href='https://aleksa-codes.github.io/resume/'
           target='_blank'
           rel='noopener noreferrer'
         >
@@ -53,7 +53,7 @@ import { navItems } from '../data/nav';
       <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='GitHub'>
         <a
           class='btn btn-square btn-ghost'
-          href='https://github.com/aleksastojsic'
+          href='https://github.com/aleksa-codes'
           target='_blank'
           rel='noopener noreferrer'
         >
@@ -136,7 +136,7 @@ import { navItems } from '../data/nav';
           >
             <a
               class='btn btn-square btn-ghost'
-              href='https://aleksastojsic.github.io/resume/'
+              href='https://aleksa-codes.github.io/resume/'
               target='_blank'
               rel='noopener noreferrer'
             >
