--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -122,7 +122,7 @@ import { projects } from '../data/project';
       class='flex flex-row items-center justify-center w-full pt-12 md:pt-16'
     >
       <a
-        href='https://github.com/aleksastojsic'
+        href='https://github.com/aleksa-codes'
         target='_blank'
         rel='noopener noreferrer'
         class='flex flex-row items-center justify-center transition-all duration-300 ease-in-out btn hover:scale-105 hover:shadow-md text-slate-300'
