Fix: aniamtions and dependencies upgrade

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,7 +27,7 @@ import { days } from '../data/day';
           >
             aleksa</a
           >{' '}• illustration by{' '}<a
-            href='https://storyset.com/people'
+            href='https://storyset.com/'
             target='_blank'
             rel='noopener noreferrer'
             class='hover:underline'>Storyset</a
