--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,9 @@ import Layout from '../components/layouts/Layout.astro';
   <div class='flex flex-row items-center justify-start mb-4 md:mb-8'>
     <span
       id='typed'
-      class='text-4xl font-extrabold lg:text-5xl text-base-content'></span>
+      class='text-4xl font-extrabold lg:text-5xl text-base-content'
+      >Hello World</span
+    >
     <span class='not-prose ml-3 animate-waving-hand w-[48px] h-[48px]'>
       <img
         src='/waving-hand.webp'
@@ -22,7 +24,10 @@ import Layout from '../components/layouts/Layout.astro';
   <h1 class='mb-[-48px] lg:mb-[-48px]'>My name is Aleksa</h1>
   <h2>
     I design and build{' '}
-    <span class='highlight-heading'>things for the web.</span>
+    <span
+      class='highlight-heading animate-box-shadow dark:animate-winter-box-shadow'
+      >things for the web.</span
+    >
   </h2>
   <div class='text-xl font-semibold'>
     Computer Science Student and Web Developer.
@@ -32,7 +37,7 @@ import Layout from '../components/layouts/Layout.astro';
   >
   </div>
 </Layout>
-<script>
+<!-- <script>
   // @ts-ignore
   import Typewriter from 'typewriter-effect/dist/core';
   document.addEventListener('DOMContentLoaded', () => {
@@ -43,4 +48,4 @@ import Layout from '../components/layouts/Layout.astro';
     });
     tw.typeString('Hello World').start();
   });
-</script>
+</script> -->
