Fix: contact textarea not resizable and mobile nav socials fix

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -129,7 +129,7 @@ import { navItems } from '../data/nav';
             </li>
           ))
         }
-        <div class='flex flex-row items-center justify-center'>
+        <div class='flex flex-row items-center justify-around'>
           <div
             class='tooltip tooltip-secondary tooltip-bottom'
             data-tip='Resume'
