--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -71,7 +71,7 @@ import Avatar from '../components/utilities/Avatar.astro';
           <div id='message-field'>
             <textarea
               placeholder='Your Message Here'
-              class='w-full textarea textarea-bordered'
+              class='w-full textarea textarea-bordered resize-none'
               name='message'
               rows={4}
               required></textarea>
