--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -40,7 +40,7 @@ const {
     />
   </head>
   <body
-    class='flex flex-col items-center min-h-screen antialiased scrollbar scrollbar-thumb-secondary scrollbar-track-slate-800 dark:scrollbar-thumb-sky-200 dark:scrollbar-track-slate-200 overflow-x-hidden overflow-y-scroll'
+    class='flex flex-col items-center min-h-screen antialiased scrollbar scrollbar-thumb-secondary scrollbar-track-slate-800 dark:scrollbar-thumb-indigo-300 dark:scrollbar-track-slate-200 overflow-x-hidden overflow-y-scroll scrollbar-thumb-rounded-md'
   >
     <div class='flex-grow w-full max-w-3xl'>
       <Navbar />
