--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -40,7 +40,7 @@ const {
     />
   </head>
   <body
-    class='flex flex-col items-center min-h-screen antialiased scrollbar scrollbar-thumb-secondary scrollbar-track-slate-800 dark:scrollbar-thumb-indigo-300 dark:scrollbar-track-slate-200 overflow-x-hidden overflow-y-scroll scrollbar-thumb-rounded-md'
+    class='flex flex-col items-center min-h-screen antialiased overflow-x-hidden overflow-y-scroll'
   >
     <div class='flex-grow w-full max-w-3xl'>
       <Navbar />
@@ -60,7 +60,7 @@ const {
       data-message='Thanks for visiting. Made with 💻 and ☕.'
       data-color='#FF813F'
       data-position='Right'
-      data-x_margin='24'
+      data-x_margin='8'
       data-y_margin='8'
     ></script>
   </body>
