Fix: margins and navbar links active state css

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import { days } from '../data/day';
 ---
 
-<footer class='w-full' aria-labelledby='footer-heading'>
+<footer class='w-full mt-16 sm:mt-4' aria-labelledby='footer-heading'>
   <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 200'>
     <path
       class='scale-y-75 wave-t'
