--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -19,11 +19,16 @@ import { navItems } from '../data/nav';
       {
         navItems.map(({ href, label }: { href: string; label: string }) => (
           <li>
-            <a href={href}>{label}</a>
+            <a
+              href={href}
+              class='active:bg-base-content/30 active:text-current hover:bg-base-content/20 hover:text-current'
+            >
+              {label}
+            </a>
           </li>
         ))
       }
-      <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='Resume'>
+      <div class='tooltip tooltip-success tooltip-bottom' data-tip='Resume'>
         <a
           class='btn btn-square btn-ghost'
           href='https://aleksa-codes.github.io/resume/'
@@ -50,7 +55,7 @@ import { navItems } from '../data/nav';
           </svg>
         </a>
       </div>
-      <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='GitHub'>
+      <div class='tooltip tooltip-info tooltip-bottom' data-tip='GitHub'>
         <a
           class='btn btn-square btn-ghost'
           href='https://github.com/aleksa-codes'
@@ -76,7 +81,7 @@ import { navItems } from '../data/nav';
           </svg>
         </a>
       </div>
-      <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='RSS'>
+      <div class='tooltip tooltip-warning tooltip-bottom' data-tip='RSS'>
         <a class='btn btn-square btn-ghost' href='/rss.xml'>
           <svg
             xmlns='http://www.w3.org/2000/svg'
@@ -130,10 +135,7 @@ import { navItems } from '../data/nav';
           ))
         }
         <div class='flex flex-row items-center justify-around'>
-          <div
-            class='tooltip tooltip-secondary tooltip-bottom'
-            data-tip='Resume'
-          >
+          <div class='tooltip tooltip-info tooltip-bottom' data-tip='Resume'>
             <a
               class='btn btn-square btn-ghost'
               href='https://aleksa-codes.github.io/resume/'
@@ -161,10 +163,7 @@ import { navItems } from '../data/nav';
               </svg>
             </a>
           </div>
-          <div
-            class='tooltip tooltip-secondary tooltip-bottom'
-            data-tip='GitHub'
-          >
+          <div class='tooltip tooltip-info tooltip-bottom' data-tip='GitHub'>
             <a
               class='btn btn-square btn-ghost'
               href='https://github.com/aleksastojsic'
@@ -190,7 +189,7 @@ import { navItems } from '../data/nav';
               </svg>
             </a>
           </div>
-          <div class='tooltip tooltip-secondary tooltip-bottom' data-tip='RSS'>
+          <div class='tooltip tooltip-info tooltip-bottom' data-tip='RSS'>
             <a class='btn btn-square btn-ghost' href='/rss.xml'>
               <svg
                 xmlns='http://www.w3.org/2000/svg'
