--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,10 +7,87 @@ import Avatar from '../components/utilities/Avatar.astro';
   <h1>Contact me</h1>
   <div class='flex flex-col items-center justify-center h-full'>
     <div
-      class='mt-[-24px] flex flex-col sm:flex-row items-start sm:items-center justify-center gap-4'
+      class='mt-[-24px] mb-4 flex flex-col items-start justify-center gap-4 w-full'
     >
+      <!-- <div class='flex flex-row items-center justify-cetner w-full gap-4'> -->
       <Avatar />
-      <p>
+
+      <!-- <div class='flex flex-col items-start justify-start w-1/5 gap-4'>
+          <a
+            href='mailto:stojsic.aleksa@gmail.com'
+            class='btn btn-ghost btn-circle bg-base-content/10 hover:w-full group transition-all duration-300 ease-in-out'
+          >
+            <span class='flex flex-row items-center justify-center gap-2'>
+              <svg
+                xmlns='http://www.w3.org/2000/svg'
+                class='icon icon-tabler icon-tabler-at'
+                width='24'
+                height='24'
+                viewBox='0 0 24 24'
+                stroke-width='2'
+                stroke='currentColor'
+                fill='none'
+                stroke-linecap='round'
+                stroke-linejoin='round'
+              >
+                <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
+                <circle cx='12' cy='12' r='4'></circle>
+                <path d='M16 12v1.5a2.5 2.5 0 0 0 5 0v-1.5a9 9 0 1 0 -5.5 8.28'
+                ></path>
+              </svg>
+
+              <span
+                class='opacity-0 hidden group-hover:opacity-100 group-hover:inline-block transition-all duration-300 ease-in-out'
+              >
+                Email
+              </span>
+            </span>
+          </a>
+          <a
+            href='
+              https:
+              discord.com
+              users
+              220611119297986561'
+            target='_blank'
+            rel='noopener noreferrer'
+            class='btn btn-ghost btn-circle bg-base-content/10 hover:w-full group transition-all duration-300 ease-in-out'
+          >
+            <span class='flex flex-row items-center justify-center gap-2'>
+              <svg
+                xmlns='http://www.w3.org/2000/svg'
+                class='icon icon-tabler icon-tabler-brand-discord'
+                width='24'
+                height='24'
+                viewBox='0 0 24 24'
+                stroke-width='2'
+                stroke='currentColor'
+                fill='none'
+                stroke-linecap='round'
+                stroke-linejoin='round'
+              >
+                <path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
+                <circle cx='9' cy='12' r='1'></circle>
+                <circle cx='15' cy='12' r='1'></circle>
+                <path d='M7.5 7.5c3.5 -1 5.5 -1 9 0'></path>
+                <path d='M7 16.5c3.5 1 6.5 1 10 0'></path>
+                <path
+                  d='M15.5 17c0 1 1.5 3 2 3c1.5 0 2.833 -1.667 3.5 -3c.667 -1.667 .5 -5.833 -1.5 -11.5c-1.457 -1.015 -3 -1.34 -4.5 -1.5l-1 2.5'
+                ></path>
+                <path
+                  d='M8.5 17c0 1 -1.356 3 -1.832 3c-1.429 0 -2.698 -1.667 -3.333 -3c-.635 -1.667 -.476 -5.833 1.428 -11.5c1.388 -1.015 2.782 -1.34 4.237 -1.5l1 2.5'
+                ></path>
+              </svg>
+              <span
+                class='opacity-0 hidden group-hover:opacity-100 group-hover:inline-block transition-all duration-300 ease-in-out delay-1000'
+              >
+                Discord
+              </span>
+            </span>
+          </a>
+        </div> -->
+      <!-- </div> -->
+      <p class='w-full'>
         Feel free to reach out to me at any time, I am always interested in{' '}
         <span class='highlight'>new stuff</span>!
       </p>
