--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,7 +7,7 @@ import Avatar from '../components/utilities/Avatar.astro';
   <h1>Contact me</h1>
   <div class='flex flex-col items-center justify-center h-full'>
     <div
-      class='mt-[-24px] mb-4 flex flex-col items-start justify-center gap-4 w-full'
+      class='mt-[-24px] mb-4 flex flex-col sm:flex-row items-start justify-center sm:items-center gap-4 w-full'
     >
       <!-- <div class='flex flex-row items-center justify-cetner w-full gap-4'> -->
       <Avatar />
