Fix: widget 1st visit text

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -52,7 +52,7 @@ const {
       src='https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js'
       data-id='aleksa'
       data-description='Support me on Buy me a coffee!'
-      data-message='Thanks for visiting. Made with 💻 and ☕.'
+      data-message='Made with 💻 and ☕'
       data-color='#FF813F'
       data-position='Right'
       data-x_margin='8'
