Fix: coffee widget button color

--- a/src/components/layouts/Layout.astro
+++ b/src/components/layouts/Layout.astro
@@ -53,7 +53,7 @@ const {
       data-id='aleksa'
       data-description='Support me on Buy me a coffee!'
       data-message='Made with 💻 and ☕'
-      data-color='#FF813F'
+      data-color='#fb923c'
       data-position='Right'
       data-x_margin='8'
       data-y_margin='8'
