--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -13,7 +13,7 @@ const DOMAIN = 'https://aleksa.codes';
 const DEFAULT_OG_IMAGE = 'https://aleksa.codes/assets/aleksa-codes-og.png';
 const {
   title = 'aleksa.codes',
-  description = "Aleksa is a web developer that works on the user interface design and frontend development. He's passionate about design, coding and building things for the web.",
+  description = 'Web developer working on user interface design and frontend development. Aleksa is passionate about coding and building things for the web, and anything tech related.',
   siteName = 'aleksa.codes',
   canonical = DOMAIN,
   ogImage = DEFAULT_OG_IMAGE,
@@ -45,7 +45,7 @@ const {
 
 <meta
   name='title'
-  content={title === 'aleksa.codes' ? siteName : `${title} | ${siteName}`}
+  content={title === 'aleksa.codes' ? 'Aleksa Codes' : `${title} | ${siteName}`}
 />
 <meta name='description' content={description} />
 
@@ -53,7 +53,9 @@ const {
 <meta property='og:url' content={canonical} />
 <meta
   property='og:title'
-  content={title === 'aleksa.codes' ? siteName : `${title} | ${siteName}`}
+  content={title === 'aleksa.codes'
+    ? 'Portfolio & Blog'
+    : `${title} | ${siteName}`}
 />
 <meta property='og:description' content={description} />
 <meta property='og:image' content={ogImage ? ogImage : DEFAULT_OG_IMAGE} />
@@ -63,7 +65,9 @@ const {
 <meta property='twitter:url' content={canonical} />
 <meta
   property='twitter:title'
-  content={title === 'aleksa.codes' ? siteName : `${title} | ${siteName}`}
+  content={title === 'aleksa.codes'
+    ? 'Portfolio & Blog'
+    : `${title} | ${siteName}`}
 />
 <meta property='twitter:creeator' content={twitterHandle} />
 <meta property='twitter:description' content={description} />
