Fix: description SEO

--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -13,7 +13,7 @@ const DOMAIN = 'https://aleksa.codes';
 const DEFAULT_OG_IMAGE = 'https://aleksa.codes/assets/aleksa-codes-og.png';
 const {
   title = 'aleksa.codes',
-  description = 'Web developer working on user interface design and frontend development. Aleksa is passionate about coding and building things for the web, and anything tech related.',
+  description = 'Web developer working on user interface design and frontend development. Aleksa is passionate about coding, building things for the web and anything tech related.',
   siteName = 'aleksa.codes',
   canonical = DOMAIN,
   ogImage = DEFAULT_OG_IMAGE,
