Chore: remove useless comments in the code

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -9,7 +9,7 @@ import { navItems } from '../data/nav';
       class='flex items-center gap-4 p-2 font-bold hover:underline md:text-2xl'
       href='/'
     >
-      <!-- If you want your image before the site title, uncomment img below and remove pt-4 from the 1st parent div above
+      <!-- for image before the site title, uncomment img below and remove pt-4 from the 1st parent div above
         <img src="https://api.lorem.space/image/face?w=96&h=96" width="48" height="48" alt="Astro Blog" class="rounded-full bg-base-200 md:w-12 md:h-12 w-9 h-9">  -->
       <span id='typed-logo'>aleksa.codes</span>
     </a>
